Create promo image

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -1,5 +1,3 @@
-<p>version 0.2 - complete up to Chapter 2</p>
-
 <div class="two-column">
 <div class="controls">
 <h3 class="first">Controls</h3>
@@ -54,8 +52,15 @@
 <h3>Supported browsers</h3> 
 Aqua Emblem is tested in Chrome, Firefox, and Internet Explorer 11. Mobile devices are not officially supported. The game probably works in Safari, but I don't test in Safari.
 
-<h3>Community</h3>
-Aqua Emblem is developed by me: Sam Magura, <b>srmagura AT ncsu.edu</b>. Did you like the game? Did you find a bug? Did you write an X-rated Ace/Shiina romance fanfic? Send me an email!</p>
+<h3>About</h3>
+Aqua Emblem was developed by me: Sam Magura, <b>srmagura AT ncsu.edu</b>.
+I originally planned for Aqua Emblem to be a 10 chapter game, but I had
+only gotten to Chapter 3 when school started. So I decided to just release
+what I had.
 
-<p>The game is open source. Visit the <a href="https://github.com/srmagura/aqua-emblem">GitHub repository</a>.
-Also, special thanks to <a href="http://coffeescript.org">CoffeeScript</a>. Aqua Emblem is copyright 2014 Sam Magura. Released under the GNU General Public License.</p>
+<p>Aqua Emblem is open source. Please email me if you have feedback, or
+are interested in continuing the game's development. The code is online
+at the <a href="https://github.com/srmagura/aqua-emblem">GitHub repository</a>.
+Special thanks to <a href="http://coffeescript.org">CoffeeScript</a>. 
+Aqua Emblem is copyright 2014 Sam Magura. Released under the GNU General 
+Public License.</p>
