--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@ Public License.</p>
 <img src="images/terrain/forest.png" />
 <img src="images/resources/logo.png" />
 <img src="images/resources/tree.png" />
+<img src="images/resources/promo_banner.png" />
 <img src="images/resources/throwing_knife.png" />
 <img src="images/resources/promo.png" />
 <img src="images/items/aquabolt.png" />
