Remove Visual Novel components.
Remove FileStates.
Rename sui to startui.
Rename cui to chapterui.

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -37,30 +37,28 @@
     </div>
 </a>
 <p>
-    Aqua Emblem is a lot like Fire Emblem. Use F to select your units (blue) and move them around the map.
+    Use F to select your units (blue) and move them around the map.
     Defeat the enemy army to beat the chapter. Click the button above to view the full Game Guide.
-</p> 
+</p>
 <ul class="how-to-play-list">
     <li><span class="defeat">You lose if ANY of your units die!</span></li>
-    <li><span class="first-aid">Use Arrow's First Aid skill to heal your units!</span> 
-        Units can even use healing skills on themselves unlike in Fire Emblem. 
+    <li><span class="first-aid">Use Arrow's First Aid skill to heal your units!</span>
+        Units can even use healing skills on themselves.
         You'll get more healing skills as the game goes on.</li>
 </ul>
 </div>
 </div>
 
-<h3>Supported browsers</h3> 
-Aqua Emblem is tested in Chrome, Firefox, and Internet Explorer 11. Mobile devices are not officially supported. The game probably works in Safari, but I don't test in Safari.
+<h3>Supported browsers</h3>
+The latest desktop versions of Chrome, Firefox, Safari, and Microsoft Edge are supported.
+<b>Mobile devices are not officially supported.</b>
 
 <h3>About</h3>
 Aqua Emblem was developed by me: Sam Magura, <b>srmagura AT ncsu.edu</b>.
-I originally planned for Aqua Emblem to be a 10 chapter game, but I had
-only gotten to Chapter 3 when school started. So I decided to just release
-what I had.
 
 <p>Aqua Emblem is open source. Please email me if you have feedback, or
 are interested in continuing the game's development. The code is online
 at the <a href="https://github.com/srmagura/aqua-emblem">GitHub repository</a>.
-Special thanks to <a href="http://coffeescript.org">CoffeeScript</a>. 
-Aqua Emblem is copyright 2014 Sam Magura. Released under the GNU General 
+Special thanks to <a href="http://coffeescript.org">CoffeeScript</a>.
+Aqua Emblem is copyright 2016 Sam Magura. Released under the GNU General
 Public License.</p>
