--- a/html/template.html
+++ b/html/template.html
@@ -1,3 +1,6 @@
+<!-- Overall structure of the page. Will be interpreted as a Python
+format string and populated by compile.py. -->
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -5,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
     {css}
-    {js} 
+    {js}
 </head>
 <body>
 <script>
