replace character portraits with the ones from OpenGameArt

--- a/html/game_info.html
+++ b/html/game_info.html
@@ -54,11 +54,12 @@ The latest desktop versions of Chrome, Firefox, Safari, and Microsoft Edge are s
 <b>Mobile devices are not officially supported.</b>
 
 <h3>About</h3>
-Aqua Emblem was developed by me: Sam Magura, <b>srmagura AT ncsu.edu</b>.
+Aqua Emblem was developed by me: <b>Sam Magura</b>, srmagura AT ncsu.edu. Special thanks to
+<b>Svetlana Kushnariova</b> (lana-chan@yandex.ru) for creating the
+<a href="http://opengameart.org/content/24x32-characters-with-faces-big-pack">character portraits</a>
+and releasing them under the Creative Commons license!
 
-<p>Aqua Emblem is open source. Please email me if you have feedback, or
-are interested in continuing the game's development. The code is online
+<p>Aqua Emblem is open source. The code is online
 at the <a href="https://github.com/srmagura/aqua-emblem">GitHub repository</a>.
-Special thanks to <a href="http://coffeescript.org">CoffeeScript</a>.
 Aqua Emblem is copyright 2016 Sam Magura. Released under the GNU General
 Public License.</p>
