--- a/html/template.html
+++ b/html/template.html
@@ -16,6 +16,9 @@ $(window).load(init)
 </script>
 
 <div class="wrapper">
+    <div class="title-bar">
+        <img src="images/title_cropped.png" />
+    </div>
     <div class="game-wrapper">
         <div class="sidebar left-sidebar">
             {unit_info_box}
